// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokensBalanceDiff.vue Should display formatted token balances difference 1`] = `
<div><span><!----> <a href="#/address/0xdc64a140aa3e981100a9beca4e685f962f0cf6c9" class="">ETL</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xdc64a140aa3e981100a9beca4e685f962f0cf6c9" value="0xdc64a140aa3e981100a9beca4e685f962f0cf6c9"></span>
  <!----></span><br>
  <div class="v-data-table theme--light">
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Previous Block (#1): Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Previous Block (#1)</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Tx Block (#2): Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Tx Block (#2)</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Change: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Change</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-start"><span><!----> <a href="#/address/0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266" class="">0xf39fd6e5...92266</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266" value="0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266"></span>
              <!----></span>
            </td>
            <td class="text-start"><span>
                99999999880 
            </span></td>
            <td class="text-start"><span>
                99999999870 
            </span></td>
            <td class="text-start">
              <!---->
              <!----> <span class="error--text"><span>
                    -10 
                </span></span>
            </td>
          </tr>
          <tr class="">
            <td class="text-start"><span><!----> <a href="#/address/0x2d481eeb2ba97955cd081cf218f453a817259ab1" class="">0x2d481eeb...59ab1</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x2d481eeb2ba97955cd081cf218f453a817259ab1" value="0x2d481eeb2ba97955cd081cf218f453a817259ab1"></span>
              <!----></span>
            </td>
            <td class="text-start"><span>
                120 
            </span></td>
            <td class="text-start"><span>
                130 
            </span></td>
            <td class="text-start"><span class="success--text"><span>
                    +10 
                </span></span>
              <!---->
              <!---->
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`TokensBalanceDiff.vue Should display token balances difference 1`] = `
<div><span><!----> <a href="#/address/0xdc64a140aa3e981100a9beca4e685f962f0cf6c9" class="">0xdc64a140...cf6c9</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xdc64a140aa3e981100a9beca4e685f962f0cf6c9" value="0xdc64a140aa3e981100a9beca4e685f962f0cf6c9"></span>
  <!----></span><br>
  <div class="v-data-table theme--light">
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Previous Block (#1): Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Previous Block (#1)</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Tx Block (#2): Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Tx Block (#2)</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Change: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Change</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-start"><span><!----> <a href="#/address/0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266" class="">0xf39fd6e5...92266</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266" value="0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266"></span>
              <!----></span>
            </td>
            <td class="text-start"><span>
                99999999880000000000000000000
            </span></td>
            <td class="text-start"><span>
                99999999870000000000000000000
            </span></td>
            <td class="text-start">
              <!---->
              <!----> <span class="error--text"><span>
                    -10000000000000000000
                </span></span>
            </td>
          </tr>
          <tr class="">
            <td class="text-start"><span><!----> <a href="#/address/0x2d481eeb2ba97955cd081cf218f453a817259ab1" class="">0x2d481eeb...59ab1</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x2d481eeb2ba97955cd081cf218f453a817259ab1" value="0x2d481eeb2ba97955cd081cf218f453a817259ab1"></span>
              <!----></span>
            </td>
            <td class="text-start"><span>
                120000000000000000000
            </span></td>
            <td class="text-start"><span>
                130000000000000000000
            </span></td>
            <td class="text-start"><span class="success--text"><span>
                    +10000000000000000000
                </span></span>
              <!---->
              <!---->
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
